--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="home">Home</string>
     <string name="turns">Turns</string>
     <string name="profile">Profile</string>
+
+    <string name="description">MDZ nació con el propósito de ayudar a mejorar la autopercepción de las personas a partir de la salud y la estética capilar. Nuestra misión es obtener la imagen deseada por nuestros clientes mediante un servicio conceptual nunca visto en el país. Usamos herramientas como la Inteligencia Artificial y productos de última generación para que nuestra tropa consiga el look que desea.
+
+</string>
 </resources>
